TinyWall Changelog
---------------------

2.1.8 - Maintenance release (xx.03.2016.)
- Fix: Potential GUI crash when whitelisting by window
- Fix: Workaround for performance issue in Windows 10
- Fix: Connections form GUI scaling issue in German localization
- Atomic file updates to reduce chance of lost settings due to file corruptions
- Add Czech localization, and Spanish update


---------------------

2.1.7 - Maintenance release (04.01.2016.)
- Fix: GUI freezes if Application Finder is closed while scan is running
- Fix: GUI is blurry if desktop scaling is enabled
- Add Polish and Turkish localizations
- Updates to Spanish, French, and Brazilian Portuguese translations
- Application database updates

---------------------

2.1.6 - Maintenance release (06.01.2015.)
- Windows 10 (TP) compatibility
- Add color-coding to Application Exceptions list
- Faster loading of Manage and Processes windows
- Fix: GUI crashes when process list is cancelled
- Fix: Printer sharing doesn't create rule for spoolsv.exe
- Fix: Two rules can get incorrectly merged
- Fix: TinyWall loses its settings under specific circumstances
- Updated Brazilian Portuguese translation
- Add Chinese translation

---------------------

2.1.5 - Maintenance release (12.10.2014.)
- Support for Window Update in Windows 8.1
- Add support for whitelisting executables on remote network shares
- Increase service robustness by dry-run testing new rules before save
- Allow selecting multiple processes when initiated over tray menu
- Add uninstallation protection
- Fix: Service crashes if backup of hosts cannot be found
- Fix: If local network traffic is allowed, local broadcasts are still blocked
- Fix: Connections window crashes if endpoint IP cannot be determined
- Fix: Under some circumstances, controller commits new settings even if rejected by service
- Fix: Wrong error message is shown if user tries to change mode while locked
- Fix: Tray shows out-of-date lock status after service locks due to timeout