@@ -3,8 +3,9 @@ TinyWall Changelog
 
 2.1.8 - Maintenance release (xx.03.2016.)
 - Fix: Potential GUI crash when whitelisting by window
-- Fix: Workaround for performance issue in Windows 10
+- Fix: GUI crash if copying to clipboard which is in use by another app
 - Fix: Connections form GUI scaling issue in German localization
+- Workaround for performance issue in Windows 10
 - Atomic file updates to reduce chance of lost settings due to file corruptions
 - Add Czech localization, and Spanish update
 
